# bluetape

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  bluetape  docker-compose.recipe.yml  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: release-please.yml
convex/: admin.ts  api.ts  apiKeys.ts  auth.config.ts  auth.ts  convex.config.ts  date.ts  families.ts  families.usernameAuth.test.ts  files.ts  groceryItems.ts  http.ts  pages.ts  permissions.ts  publicConfig.ts  recipes.test.ts  recipes.ts  routineCompletions.ts  routines.ts  schema.ts  secrets.ts  supportedLocales.ts  tasks.ts  today.ts  translationActions.ts  translations.test.ts  translations.ts  userProfiles.ts  usernameAuth.test.ts  usernameAuth.ts  wiki.ts
convex/_generated/: api.d.ts  server.d.ts
convex/lib/: authSettings.ts  sha256.ts
convex/translation/: protection.test.ts  protection.ts  provider.test.ts  provider.ts  validators.ts
docs/: translation.md
docs/adr/: 001-stable-record-routes-and-wiki-authoring.md  002-external-recipe-media-worker.md
docs/plans/: 2026-07-16-cli-device-authorization.md  2026-07-16-lazy-normalized-content-translation.md  PLAN.md  (+2 more)
scripts/: check-i18n.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
src/lib/: cn.ts  (+9 more)
worker/: .env.example  Dockerfile  README.md  pyproject.toml
worker/bluetape_recipe_worker/: __init__.py  client.py  config.py  extract.py  main.py  security.py
worker/tests/: test_config.py  test_extract.py
(+54 files in other folders)
